[package]
name = "ddp-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.40"
serde_json = "1.0"
crossbeam = "0.8.2"
dashmap = "5.4.0"
