[package]
name = "ddp-connection"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["protocol", "ddp", "pixel", "wled"]
categories = ["network-programming", "multimedia"]
description = "Distributed Display Protocol (DDP) in Rust. This is a fork of ddp-rs by Coral https://github.com/coral/ddp-rs"
repository = "https://github.com/paulwrath1223/WLED-Streamer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.40"
serde_json = "1.0"
crossbeam = "0.8.2"
dashmap = "5.4.0"
log = "0.4.17"

[dev-dependencies]
anyhow = "1.0.40"
