[package]
name = "ddp-rs"
version = "0.3.3-alpha.0"
edition = "2021"
license = "MIT"
keywords = ["distributed", "display", "protocol", "ddp", "pixel"]
categories = ["network-programming", "multimedia"]
description = "Distributed Display Protocol (DDP) in Rust"
repository = "https://github.com/coral/ddp-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.40"
serde_json = "1.0"
crossbeam = "0.8.2"
dashmap = "5.4.0"
log = "0.4.17"

[dev-dependencies]
anyhow = "1.0.40"
